--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,9 @@
+//This file specifies details about the conditionals and files that are loaded when the server is accessed
 {
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  //
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
